--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "^12.3.0",
     "next-seo": "^5.5.0",
     "react": "^18.2.0",
@@ -40,7 +41,7 @@
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.13",
     "cypress": "^10.7.0",
-    "eslint": "^8.23.0",
+    "eslint": "8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "^12.3.0",
@@ -70,5 +71,8 @@
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3"
   },
-  "author": "Ixartz (https://github.com/ixartz)"
+  "author": "Ixartz (https://github.com/ixartz)",
+  "prettier": {
+    "singleQuote": true
+  }
 }
