--- a/.eslintrc
+++ b/.eslintrc
@@ -52,6 +52,7 @@
         "import/prefer-default-export": "off", // Named export is easier to refactor automatically
         "simple-import-sort/imports": "error", // Import configuration for `eslint-plugin-simple-import-sort`
         "simple-import-sort/exports": "error", // Export configuration for `eslint-plugin-simple-import-sort`
+        "no-param-reassign": "off", // Allow to mutate function parameters, Reduxt Toolkit slices
         "@typescript-eslint/no-unused-vars": "off",
         "unused-imports/no-unused-imports": "error",
         "unused-imports/no-unused-vars": [
