--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "js-cookie": "^3.0.1",
     "next": "^12.3.0",
     "next-seo": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.1.1",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0"
   },
@@ -36,6 +38,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.0.0",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.7.16",
     "@types/react": "^18.0.18",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
